src/test/scala/unit_tests/invalid_semantic/type_mismatch.wacc
# mismatch of types during assignment

begin
    int x = true
end